--- a/manifest.yaml
+++ b/manifest.yaml
@@ -25,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-nlb
+  namespace: expense
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: nlb    # For AWS
     service.beta.kubernetes.io/aws-load-balancer-internal: "true"  # For internal NLB
