--- a/manifest.yaml
+++ b/manifest.yaml
@@ -18,6 +18,8 @@ spec:
       containers:
       - name: mysql123
         image: manjudbadevops/mysqltest:1.0.0
+         configMap:
+          name: mysql-config
 
 ---
 
@@ -37,4 +39,17 @@ spec:
     protocol: TCP
   selector:
     app: mysql
+    
+
+----
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-config
+  namespace: expense
+data:
+  my.cnf: |
+    [mysqld]
+    local_infile    = 1
 
